@@ -2,6 +2,12 @@ CHANGELOG
 This is the change log for the phpWebSite base only. Each module has
 its own separate CHANGELOG file.
 
+23 June 2008
++ Change to url retrieval function. Some servers return a different
+  value for redirect_url than the request_uri. Switching them.
++ getTemplateDirectory checks if in branch to determine returned
+  module directory. Helps with hub development.
+
 19 June 2008
 + More work on XMLParser
 
